# jarvis-cli

./: README.md  branches.db  jarvis.py  pyproject.toml  requirement.txt
jarvis/: cli.py
jarvis/commands/: commit_helper.py  db_explorer.py  file_transfer.py  git_manager.py  port_checker.py  process_killer.py  system_monitor.py
jarvis/utils/: commit_utils.py  db_utils.py  file_utils.py  git_utils.py  system_utils.py
jarvis_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
